# snarl

./: .gitignore  README.md
Snarl/: setup.cfg
Snarl/Game/: gamestate.py  hallway.py  level.py  occupants.py  room.py  rulechecker.py  run_unit_tests.sh  test_posn.py  test_room.py  test_tile.py  tile.py  utils.py
Snarl/Game/Tests/: test_gamestate.py  test_hallway.py  test_level.py  test_posn.py  test_room.py  test_rulechecker.py  test_tile.py
Snarl/Planning/: adversary-strategies.md  adversary.md  combat.md  game-manager.md  gamemanager.md  local.md  multi-game.md  observer.md  plan.md  player.md  refactor.md  rulechecker.md  state.md
Snarl/Tests/Level/: 1-out.json  2-in.json  3-out.json  testRoom
Snarl/local/: README.md  localSnarl.py  localSnarl2.py  other.levels  run.sh
Snarl/net/: README.md  client.sh  netutils.py  server.sh  snarl.levels  snarlClient.py  snarlServer.py
Snarl/src/Game/: __init__.py  actor.py  enemy.py  enemy_ghost.py  enemy_zombie.py  gamemanager.py  gamestate.py  hallway.py  level.py  moveresult.py  observer.py  observer_impl.py  occupants.py  player.py  player_impl.py  posn.py  room.py  rulechecker.py  run_game.py  run_unit_tests.sh  tile.py  turnorder.py  utils.py
Snarl/tests/: parseJson.py
Snarl/tests/Gamemanager/: 1-in.json  1-out.json  2-in.json  2-out.json  3-in.json  4-in.json  4-out.json  5-in.json  5-out.json  6-in.json  6-out.json  7-in.json  7-out.json  testManager.py
Snarl/tests/Level/: 1-in.json  2-in.json  2-out.json  3-in.json  3-out.json  testLevel.py  testRoom.py
Snarl/tests/Room/: 1-in.json  2-out.json  3-in.json  (+1 more)
(+39 files in other folders)
