[metadata]
# replace with your username:
name = Snarl-Nimrasea
version = 0.0.1
author = Nic Molica and Ty Nichols
author_email = nichols.t@northeastern.edu
description = CS 4500 SNARL game project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.ccs.neu.edu/CS4500-S21/Nimrasea
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src\Game
